--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="profile" href="http://gmpg.org/xfn/11">
 <link rel="pingback" href="https://DhanukaFittings1.github.io/xmlrpc.php">
 
-<title>DHANUKA FITTINGS &#8211; A Complete House Of Alluminium Fittings</title>
+<title>DHANUKA FITTINGS &#8211; A Complete House Of Alluminium Fittings&#8230;</title>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="DHANUKA FITTINGS &raquo; Feed" href="https://DhanukaFittings1.github.io/feed/" />
